add unit tests for spring services and repositories