@@ -4,6 +4,7 @@ import com.ecommerce.springbootecommerce.Exception.ApiRequestException;
 import com.ecommerce.springbootecommerce.dto.product.ProductDto;
 import com.ecommerce.springbootecommerce.dto.product.ProductsResponse;
 import com.ecommerce.springbootecommerce.service.Interfaces.ProductService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -40,13 +41,40 @@ public class ProductControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
+    private BigDecimal bigDecimal;
+    private ProductDto testProductDto;
+    private List<ProductDto> testProductsDto;
+    private List<ProductDto> testEmptyProductsDto;
+    private ProductsResponse testProductsResponse;
+    private ProductsResponse testEmptyProductsResponse;
+
+    @BeforeEach
+    void setUp() {
+        bigDecimal = new BigDecimal("1000");
+        testProductDto = new ProductDto();
+        testProductDto.setId(1L);
+        testProductDto.setProductName("product name");
+        testProductDto.setUnitPrice(bigDecimal);
+        testProductDto.setImageUrl("productImageUrl");
+        testProductDto.setActive(true);
+        testProductDto.setUnitsInStocks(100);
+        testProductDto.setGender_category("femme");
+        testProductDto.setProduct_category("Manteaux");
+        testProductDto.setBrand_category("Alexander McQueen");
+
+        testProductsDto = List.of(testProductDto);
+        testEmptyProductsDto = Collections.emptyList();
+
+        testProductsResponse = new ProductsResponse(testProductsDto, 0, 1, 1L, 1);
+        testEmptyProductsResponse = new ProductsResponse(testEmptyProductsDto, 0, 1, 0L, 1);
+    }
+
+
     @Test
     @DisplayName("GET api/v1/product/1 - FOUND")
     void testGetProductById() throws Exception {
 
-        BigDecimal bigDecimal = new BigDecimal("1000");
-        ProductDto mockProductDto = new ProductDto(1L, "product name", bigDecimal, "productImageUrl", true, 100, "femme", "Manteaux", "Alexander McQueen");
-        doReturn(mockProductDto).when(service).getProductById(1L);
+        doReturn(testProductDto).when(service).getProductById(1L);
 
         mockMvc.perform(get("/api/v1/product/1"))
                 .andExpect(status().isOk())
@@ -88,13 +116,8 @@ public class ProductControllerTest {
     @DisplayName("GET api/v1/product - FOUND")
     void testGetProduct() throws Exception {
 
-        BigDecimal bigDecimal = new BigDecimal("1000");
-        ProductDto mockProductDto1 = new ProductDto(1L, "product name1", bigDecimal,"productImageUrl", true, 100, "femme", "Manteaux", "Alexander McQueen");
-        ProductDto mockProductDto2 = new ProductDto(2L, "product name2", bigDecimal,"productImageUrl", true, 100, "femme", "Manteaux", "Alexander McQueen");
-
-        List<ProductDto> mockProductsDto = List.of(mockProductDto1, mockProductDto2);
-        ProductsResponse mockProductsResponse = new ProductsResponse(mockProductsDto, 0, 10, 2L, 1);
-        doReturn(mockProductsResponse).when(service).getProducts(2, Collections.singletonList(0), Collections.singletonList(0), 0, 10, new String[]{"id", "asc"});
+        doReturn(testProductsResponse).when(service).getProducts(
+                2, Collections.singletonList(0), Collections.singletonList(0), 0, 10, new String[]{"id", "asc"});
 
 
         mockMvc.perform(get("/api/v1/product"))
@@ -111,7 +134,7 @@ public class ProductControllerTest {
                 .andExpect(header().string("X-Frame-Options", "DENY"))
 
                 .andExpect(jsonPath("$.products[0].id", is(1)))
-                .andExpect(jsonPath("$.products[0].product_name", is("product name1")))
+                .andExpect(jsonPath("$.products[0].product_name", is("product name")))
                 .andExpect(jsonPath("$.products[0].unit_price", is(1000)))
                 .andExpect(jsonPath("$.products[0].image_url", is("productImageUrl")))
                 .andExpect(jsonPath("$.products[0].units_in_stock", is(100)))
@@ -119,18 +142,9 @@ public class ProductControllerTest {
                 .andExpect(jsonPath("$.products[0].gender_category", is("femme")))
                 .andExpect(jsonPath("$.products[0].product_category", is("Manteaux")))
                 .andExpect(jsonPath("$.products[0].brand_category", is("Alexander McQueen")))
-                .andExpect(jsonPath("$.products[1].id", is(2)))
-                .andExpect(jsonPath("$.products[1].product_name", is("product name2")))
-                .andExpect(jsonPath("$.products[1].unit_price", is(1000)))
-                .andExpect(jsonPath("$.products[1].image_url", is("productImageUrl")))
-                .andExpect(jsonPath("$.products[1].units_in_stock", is(100)))
-                .andExpect(jsonPath("$.products[1].active", is(true)))
-                .andExpect(jsonPath("$.products[1].gender_category", is("femme")))
-                .andExpect(jsonPath("$.products[1].product_category", is("Manteaux")))
-                .andExpect(jsonPath("$.products[1].brand_category", is("Alexander McQueen")))
                 .andExpect(jsonPath("$.current_page", is(0)))
-                .andExpect(jsonPath("$.size", is(10)))
-                .andExpect(jsonPath("$.total_items", is(2)))
+                .andExpect(jsonPath("$.size", is(1)))
+                .andExpect(jsonPath("$.total_items", is(1)))
                 .andExpect(jsonPath("$.total_pages", is(1)));
 
     }
@@ -139,11 +153,8 @@ public class ProductControllerTest {
     @DisplayName("GET api/v1/product - EMPTY LIST")
     void testGetProductNotFound() throws Exception {
 
-        List<ProductDto> mockProductsDto = Collections.emptyList();
-        ProductsResponse mockProductsResponse = new ProductsResponse(mockProductsDto, 0, 10, 0L, 1);
-        doReturn(mockProductsResponse).when(service).getProducts(2, Collections.singletonList(0), Collections.singletonList(0), 0, 10, new String[]{"id", "asc"});
-
-
+        doReturn(testEmptyProductsResponse).when(service).getProducts(
+                2, Collections.singletonList(0), Collections.singletonList(0), 0, 10, new String[]{"id", "asc"});
 
         mockMvc.perform(get("/api/v1/product"))
                 .andExpect(status().isOk())
@@ -160,7 +171,7 @@ public class ProductControllerTest {
 
                 .andExpect(jsonPath("$.products", hasSize(0)))
                 .andExpect(jsonPath("$.current_page", is(0)))
-                .andExpect(jsonPath("$.size", is(10)))
+                .andExpect(jsonPath("$.size", is(1)))
                 .andExpect(jsonPath("$.total_items", is(0)))
                 .andExpect(jsonPath("$.total_pages", is(1)));
 
@@ -169,13 +180,7 @@ public class ProductControllerTest {
     @Test
     @DisplayName("GET api/v1/product/new - FOUND")
     void testGetNewProduct() throws Exception {
-
-        BigDecimal bigDecimal = new BigDecimal("1000");
-        ProductDto mockProductDto1 = new ProductDto(1L, "product name1", bigDecimal, "productImageUrl", true, 100, "femme", "Manteaux", "Alexander McQueen");
-        ProductDto mockProductDto2 = new ProductDto(2L, "product name2", bigDecimal, "productImageUrl", true, 100, "femme", "Manteaux", "Alexander McQueen");
-        List<ProductDto> mockProductsDto = List.of(mockProductDto1, mockProductDto2);
-        ProductsResponse mockProductsResponse = new ProductsResponse(mockProductsDto, 0, 10, 2L, 1);
-        doReturn(mockProductsResponse).when(service).getNewProducts(2, 0, 10);
+        doReturn(testProductsResponse).when(service).getNewProducts(2, 0, 10);
 
 
         mockMvc.perform(get("/api/v1/product/new"))
@@ -192,7 +197,7 @@ public class ProductControllerTest {
                 .andExpect(header().string("X-Frame-Options", "DENY"))
 
                 .andExpect(jsonPath("$.products[0].id", is(1)))
-                .andExpect(jsonPath("$.products[0].product_name", is("product name1")))
+                .andExpect(jsonPath("$.products[0].product_name", is("product name")))
                 .andExpect(jsonPath("$.products[0].unit_price", is(1000)))
                 .andExpect(jsonPath("$.products[0].image_url", is("productImageUrl")))
                 .andExpect(jsonPath("$.products[0].units_in_stock", is(100)))
@@ -200,18 +205,9 @@ public class ProductControllerTest {
                 .andExpect(jsonPath("$.products[0].gender_category", is("femme")))
                 .andExpect(jsonPath("$.products[0].product_category", is("Manteaux")))
                 .andExpect(jsonPath("$.products[0].brand_category", is("Alexander McQueen")))
-                .andExpect(jsonPath("$.products[1].id", is(2)))
-                .andExpect(jsonPath("$.products[1].product_name", is("product name2")))
-                .andExpect(jsonPath("$.products[1].unit_price", is(1000)))
-                .andExpect(jsonPath("$.products[1].image_url", is("productImageUrl")))
-                .andExpect(jsonPath("$.products[1].units_in_stock", is(100)))
-                .andExpect(jsonPath("$.products[1].active", is(true)))
-                .andExpect(jsonPath("$.products[1].gender_category", is("femme")))
-                .andExpect(jsonPath("$.products[1].product_category", is("Manteaux")))
-                .andExpect(jsonPath("$.products[1].brand_category", is("Alexander McQueen")))
                 .andExpect(jsonPath("$.current_page", is(0)))
-                .andExpect(jsonPath("$.size", is(10)))
-                .andExpect(jsonPath("$.total_items", is(2)))
+                .andExpect(jsonPath("$.size", is(1)))
+                .andExpect(jsonPath("$.total_items", is(1)))
                 .andExpect(jsonPath("$.total_pages", is(1)));
 
     }
@@ -220,11 +216,7 @@ public class ProductControllerTest {
     @DisplayName("GET api/v1/product/new - EMPTY LIST")
     void testGetNewProductNotFound() throws Exception {
 
-        List<ProductDto> mockProductsDto = Collections.emptyList();
-        ProductsResponse mockProductsResponse = new ProductsResponse(mockProductsDto, 0, 10, 0L, 1);
-        doReturn(mockProductsResponse).when(service).getNewProducts(2, 0, 10);
-
-
+        doReturn(testEmptyProductsResponse).when(service).getNewProducts(2, 0, 10);
 
         mockMvc.perform(get("/api/v1/product/new"))
                 .andExpect(status().isOk())
@@ -241,7 +233,7 @@ public class ProductControllerTest {
 
                 .andExpect(jsonPath("$.products", hasSize(0)))
                 .andExpect(jsonPath("$.current_page", is(0)))
-                .andExpect(jsonPath("$.size", is(10)))
+                .andExpect(jsonPath("$.size", is(1)))
                 .andExpect(jsonPath("$.total_items", is(0)))
                 .andExpect(jsonPath("$.total_pages", is(1)));
 
